--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ asgiref==3.2.7
 Django==3.0.5
 django-js-asset==1.2.2
 django-mptt==0.11.0
+Pillow==7.1.1
+python-slugify==4.0.0
 pytz==2019.3
 sqlparse==0.3.1
+text-unidecode==1.3
+xlrd==1.2.0
