--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-mptt==0.11.0
 Pillow==7.1.1
 python-slugify==4.0.0
 pytz==2019.3
+sorl-thumbnail==12.6.3
 sqlparse==0.3.1
 text-unidecode==1.3
 xlrd==1.2.0
